Profi Option - case study: html, css

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="TopMonks Case Study - Profi Option">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800" rel="stylesheet">
   <link rel="stylesheet" src="./assets/semantic.min.css">
   <link rel="stylesheet" href="/stylesheets/profi-option.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 
 
 </head>
+<body>
 <section class="intro">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -144,101 +146,111 @@
 
 <section class="stylization">
   <div class="mdc-layout-grid">
-    <div class="box mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h3>Colors &amp; Typography</h3>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
-          Main color
+    <div class="box">
+      <div class="mdc-layout-grid__inner tm-layout-wrapper">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <h3>Colors &amp; Typography</h3>
+        </div>
+        <div class="empty-box mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
             src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
-          Brand color
+          <h4>Main color</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
-          Success
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556689781/topmonks.com/profi-option/color_blue.svg">
+          <h4>Brand color</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
-          Warning
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_green.svg">
+          <h4>Success</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
-          Error
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_yellow.svg">
+          <h4>Warning</h4>
         </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_red.svg">
+          <h4>Error</h4>
+        </div>
+        <div class="empty-box mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+        </div>
       </div>
 
+      <div class="stylization_font mdc-layout-grid__inner tm-layout-wrapper">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <p>Landing page headline / 48px Extra bold</p>
+          <h2 style="font-weight:800; line-height: 60px;">ACTIVE INVESTMENTS</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p>Landing page headline / 48px Extra bold</p>
-        <h2>Active investments</h2>
-      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Headline / 32px Regular</p>
+          <h2 style="font-size: 32px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 32px">Active investments</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Headline / 32px Regular</p>
-        <h2 style="font-size: 32px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 32px">Active investments</h2>
-      </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Sub Headline / 24px Regular</p>
-        <h2 style="font-size: 24px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 24px">Active investments</h2>
-      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Sub Headline / 24px Regular</p>
+          <h2 style="font-size: 24px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 24px">Active investments</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Basic font / 16px Regular</p>
-        <h2 style="font-size: 16px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 16px">Active investments</h2>
-      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Basic font / 16px Regular</p>
+          <h2 style="font-size: 16px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 16px">Active investments</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Detail font / 14px Regular</p>
-        <h2 style="font-size: 14px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 14px">Active investments</h2>
-      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Detail font / 14px Regular</p>
+          <h2 style="font-size: 14px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 14px">Active investments</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Subtle font / 12px Regular</p>
-        <h2 style="font-size: 12px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 12px">Active investments</h2>
-      </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Subtle font / 12px Regular</p>
+          <h2 style="font-size: 12px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 12px">Active investments</h2>
+        </div>
 
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <p>Graph font / 10px Regular</p>
-        <h2 style="font-size: 10px">Active investments</h2>
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h2 style="font-size: 10px">Active investments</h2>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p>Graph font / 10px Regular</p>
+          <h2 style="font-size: 10px">Active investments</h2>
+        </div>
+        <div
+          class="styled-title mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h2 style="font-size: 10px">Active investments</h2>
+        </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="">
+<section class="scheme">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Refreshed visuals</h2>
         <p>Our team tested 4&nbsp;colour schemes for light version and 2&nbsp;schemes for a dark
           version of the app. The final design can be seen down below. We used a lot of
@@ -246,22 +258,58 @@
           most important information for&nbsp;users.</p>
       </div>
     </div>
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.01.png">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.02.png">
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.03.png">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.04.png">
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.05.png">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.06.png">
+      </div>
+    </div>
   </div>
 </section>
 
-<section class="">
+<section class="prototypes">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Testing and clickable prototypes</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="prototypes_design mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556693433/topmonks.com/profi-option/prototypes.01.png"
+          width="100%" height="auto">
         <h3>Qualitative testing</h3>
         <p>We tested the app with users who are regular traders and also with people who
           just want to try binary trading. After the initial set of subjects, we did a lot
           of changes to make the platform even more usable.</p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div
+        class="prototypes_design mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <img
+          src="https://res.cloudinary.com/topmonks/image/upload/v1556693432/topmonks.com/profi-option/prototypes.02.png"
+          width="100%" height="auto">
         <h3>Clickable prototypes</h3>
         <p>Our UX Designer created clickable prototypes in Figma. These prototypes were
           used by developers to understand the interactivity of the trading platform. We
@@ -278,19 +326,18 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h3>What’s&nbsp;the outcome? Satisfied customer.</h3>
       </div>
-      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="box title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <p>Tomáš Paulus, UX designer from TopMonks, really knows what he's&nbsp;doing.
           Based on his research, he adapted the platform into a usable form with a
           professional design. We certainly recommend him further.</p>
         <hr>
-        <p><span itemprop="name">Karel Dostál</span>,<span> 24Cryptex</span>
-        </p>
+        <span itemprop="name">Karel Dostál</span>,<span> 24Cryptex</span>
       </div>
     </div>
   </div>
 </section>
 <hr>
-<section class="">
+<section class="contact">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -299,13 +346,13 @@
           Need a hand? We have 120&nbsp;of them. If you would like to discuss further, share
           feedback or ask any questions, please get in touch with&nbsp;Lea.</p>
       </div>
-      <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
+      <div style="padding: 24px;"
+        class="box contact_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
             <img alt="[foto] Lea Petrášová" src="https://insight.topmonks.com/avatar/lea-petrasova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="75" height="75">
+                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100">
           </div>
           <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
             <p><span itemprop="employee">Lea Petrášová</span></p>
@@ -318,6 +365,5 @@
     </div>
   </div>
 </section>
-
 </body>
 </html>
