Profi Option - css html

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -101,7 +101,7 @@
               <a href="#our-work">How we work</a>
             </li>
             <li>
-              <a href="#contact">Contact</a>
+              <a href="#po_contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -475,7 +475,7 @@
     </div>
   </div>
 </section>
-<section class="contact">
+<section id="po_contact" class="contact">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -484,13 +484,13 @@
           Need a hand? We have 120&nbsp;of them. If you would like to discuss further, share
           feedback or ask any questions, please get in touch with&nbsp;Lea.</p>
       </div>
-      <div style="padding: 24px;"
+      <div style="padding: 24px; align-self: center"
            class="box contact_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop"
            itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
             <img alt="[foto] Lea Petrášová" src="https://insight.topmonks.com/avatar/lea-petrasova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100">
+                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100" style="margin: 0.5em auto">
           </div>
           <div
             class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
