Profi-Op. : header

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -89,16 +89,16 @@
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li>
-              <a href="#we-offer_development">Development</a>
+              <a href="#about-project">About</a>
             </li>
             <li>
-              <a href="#we-offer_audit">Audit</a>
+              <a href="#process">Process</a>
             </li>
             <li>
-              <a href="#we-offer_design">UX</a>
+              <a href="#analysis">Visuals</a>
             </li>
             <li>
-              <a href="#our-work">How we work</a>
+              <a href="#prototypes">Testing</a>
             </li>
             <li>
               <a href="#po_contact">Contact</a>
@@ -161,7 +161,7 @@
           src="https://res.cloudinary.com/topmonks/image/upload/v1556616308/topmonks.com/profi-option/img_screen1.png"
           width="100%" height="640">
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+      <div id="about-project" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>About project</h3>
         <p>Our team was asked to review the 24Cryptex trading app which had problems
           with usability, overall look and feel of their platform.</p>
@@ -189,7 +189,7 @@
   </div>
 </section>
 
-<section class="process">
+<section id="process" class="process">
   <div class="mdc-layout-grid">
     <div class="box mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -262,7 +262,7 @@
   </div>
 </section>
 
-<section class="analysis">
+<section id="analysis" class="analysis">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -421,7 +421,7 @@
   </div>
 </section>
 
-<section class="prototypes">
+<section id="prototypes" class="prototypes">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
