--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Profi Option</title>
-
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Profi Option</title>
   <meta name="Description" content="TopMonks Case Study - Profi Option">
+  <link rel="preconnect" href="//res.cloudinary.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800" rel="stylesheet">
   <link rel="stylesheet" src="./assets/semantic.min.css">
   <link rel="stylesheet" href="/stylesheets/profi-option.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
-
-
 </head>
 <body>
 <header class="tm-app-bar">
@@ -157,9 +157,13 @@
           the platform and usability&nbsp;tests.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556616308/topmonks.com/profi-option/img_screen1.png"
-          width="100%" height="640">
+        <picture>
+          <source media="(max-width: 480)" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,w_480,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/f_auto,h_566,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png"
+            width="100%" height="566">
+        </picture>
+
       </div>
       <div id="about-project" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
         <h3>About project</h3>
@@ -317,7 +321,7 @@
       <div class="stylization_font mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <p>Landing page headline / 48px Extra bold</p>
-          <h2 style="font-weight:800; line-height: 60px;">ACTIVE INVESTMENTS</h2>
+          <h2 class="font_bold">ACTIVE INVESTMENTS</h2>
         </div>
 
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
