Profi Option - Lighthouse Improvement of Images

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -158,9 +158,10 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <picture>
-          <source media="(max-width: 480)" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,w_480,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png">
+          <source media="(max-width: 480)"
+                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,w_480,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/f_auto,h_566,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png"
+            alt="Introduction - Design of the Platform and Usability Tests" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,h_566,dpr_auto/v1556616308/topmonks.com/profi-option/img_screen1.png"
             width="100%" height="566">
         </picture>
 
@@ -201,7 +202,7 @@
       </div>
       <div class="process_list mdc-layout-grid__cell">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556629548/topmonks.com/profi-option/icon_research.svg">
+         alt="Icon for Research In the Process Section" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556629548/topmonks.com/profi-option/icon_research.svg">
         <h3 class="text-center">Research</h3>
         <ul class="polygon_blue">
           <li><a>Heuristic evaluation</a></li>
@@ -213,7 +214,7 @@
 
       <div class="process_list mdc-layout-grid__cell">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556629547/topmonks.com/profi-option/icon_redesign.svg">
+          alt="Icon for Redesign In the Process Section" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556629547/topmonks.com/profi-option/icon_redesign.svg">
         <h3 class="text-center">Redesign</h3>
         <ul class="polygon_yellow">
           <li><a>Information architecture</a></li>
@@ -225,7 +226,7 @@
 
       <div class="process_list mdc-layout-grid__cell">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556629547/topmonks.com/profi-option/icon_visuals.svg">
+          alt="Icon for Visuals and testing In the Process Section" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556629547/topmonks.com/profi-option/icon_visuals.svg">
         <h3 class="text-center">Visuals and testing</h3>
         <ul class="polygon_green">
           <li><a>Typography scale</a></li>
@@ -251,16 +252,37 @@
     </div>
     <div class="mdc-layout-grid__inner design_platforms">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-6-desktop">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1556631547/topmonks.com/profi-option/design.01.png">
+        <picture>
+          <source media=""
+                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.01.png">
+          <img
+           alt="Original Design of Platform - Investments Graph" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.01.png">
+        </picture>
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-6-desktop">
+        <picture>
+          <source media=""
+                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.02.png">
+          <img
+           alt="Original Design of Platform - User Profile" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.02.png">
+        </picture>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-6-desktop">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1556631547/topmonks.com/profi-option/design.02.png">
+        <picture>
+          <source media=""
+                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.03.png">
+          <img
+            alt="Original Design of Platform - New Withdrawal" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.03.png">
+        </picture>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-6-desktop">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1556631547/topmonks.com/profi-option/design.03.png">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-6-desktop">
-        <img src="https://res.cloudinary.com/topmonks/image/upload/v1556631547/topmonks.com/profi-option/design.04.png">
+        <picture>
+          <source media=""
+                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.04.png">
+          <img
+            alt="Original Design of Platform - Active Investments" src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1556631547/topmonks.com/profi-option/design.04.png">
+        </picture>
       </div>
     </div>
   </div>
@@ -291,27 +313,27 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+           alt="Black Triangle Icon In the Colors Section" src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
           <h4>Main color</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556689781/topmonks.com/profi-option/color_blue.svg">
+            alt="Blue Triangle Icon In the Colors Section" src="https://res.cloudinary.com/topmonks/image/upload/v1556689781/topmonks.com/profi-option/color_blue.svg">
           <h4>Brand color</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_green.svg">
+            alt="Green Triangle Icon In the Colors Section" src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_green.svg">
           <h4>Success</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_yellow.svg">
+            alt="Yellow Triangle Icon In the Colors Section" src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_yellow.svg">
           <h4>Warning</h4>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
           <img
-            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_red.svg">
+            alt="Red Triangle Icon In the Colors Section"  src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_red.svg">
           <h4>Error</h4>
         </div>
         <div class="empty-box mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
@@ -397,29 +419,29 @@
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.01.png">
+         alt="Scheme For Light Version - Investments Graph" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.01.png">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.02.png">
-      </div>
-
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.03.png">
-      </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.04.png">
+          alt="Scheme For Dark Version - Investments Graph" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.02.png">
       </div>
 
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.05.png">
+          alt="Scheme For Light Version - Online Wallet" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.03.png">
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.06.png">
+          alt="Scheme For Light Version - Online Wallet" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.04.png">
+      </div>
+
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <img
+          alt="Scheme For Dark Version - User Account" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.05.png">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <img
+          alt="Scheme For Light Version - Authentication Settings" src="https://res.cloudinary.com/topmonks/image/upload/v1556692804/topmonks.com/profi-option/visuals.06.png">
       </div>
     </div>
   </div>
@@ -434,7 +456,7 @@
       <div
         class="prototypes_design mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1556693433/topmonks.com/profi-option/prototypes.01.png"
+         alt="Photo For Qualitative Testing" src="https://res.cloudinary.com/topmonks/image/upload/v1556693433/topmonks.com/profi-option/prototypes.01.png"
           width="100%" height="auto">
         <h3>Qualitative testing</h3>
         <p>We tested the app with users who are regular traders and also with people who
@@ -443,7 +465,7 @@
       </div>
       <div
         class="prototypes_design mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <img
+        <img alt="Photo For Clickable Prototypes In Figma"
           src="https://res.cloudinary.com/topmonks/image/upload/v1556693432/topmonks.com/profi-option/prototypes.02.png"
           width="100%" height="auto">
         <h3>Clickable prototypes</h3>
@@ -494,7 +516,8 @@
         <div class="mdc-layout-grid__inner">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-desktop">
             <img alt="[foto] Lea Petrášová" src="https://insight.topmonks.com/avatar/lea-petrasova"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100" style="margin: 0.5em auto">
+                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="100" height="100"
+                 style="margin: 0.5em auto">
           </div>
           <div
             class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-8-desktop">
@@ -668,13 +691,17 @@
             </svg>
           </a><a href="https://dribbble.com/TopMonks" title="TopMonks on Dribbble" rel="me" itemprop="sameAs"
                  class="dribbble">
-            <svg enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" width="33px" height="33px"><g id="Layer_1_1_"><circle cx="256" cy="256" fill="#E94E8A" r="238.2"></circle><title>[Logo icon] Dribbble</title></g><g><circle cx="256" cy="256" fill="none" r="140.5" stroke="#FAFAFA" stroke-miterlimit="10" stroke-width="10"></circle>
-              <path d="M203,124.5c49.9,46.1,112.1,183.4,116.6,256.8" fill="none" stroke="#FAFAFA" stroke-miterlimit="10"
-                    stroke-width="10"></path>
-              <path d="M354.8,156.1c-10.8,45.9-154.1,102.5-238.2,82.6" fill="none" stroke="#FAFAFA"
-                    stroke-miterlimit="10" stroke-width="10"></path>
-              <path d="M161,359.5c40.9-83.9,162.6-124.3,235.2-95.5" fill="none" stroke="#FAFAFA" stroke-miterlimit="10"
-                    stroke-width="10"></path></g></svg>
+            <svg enable-background="new 0 0 512 512" id="Layer_1" version="1.1" viewBox="0 0 512 512"
+                 xml:space="preserve" xmlns="http://www.w3.org/2000/svg" width="33px" height="33px"><g id="Layer_1_1_"><circle cx="256" cy="256" fill="#E94E8A" r="238.2"></circle><title>[Logo icon] Dribbble</title></g>
+              <g><circle cx="256" cy="256" fill="none" r="140.5" stroke="#FAFAFA" stroke-miterlimit="10" stroke-width="10"></circle>
+                <path d="M203,124.5c49.9,46.1,112.1,183.4,116.6,256.8" fill="none" stroke="#FAFAFA"
+                      stroke-miterlimit="10"
+                      stroke-width="10"></path>
+                <path d="M354.8,156.1c-10.8,45.9-154.1,102.5-238.2,82.6" fill="none" stroke="#FAFAFA"
+                      stroke-miterlimit="10" stroke-width="10"></path>
+                <path d="M161,359.5c40.9-83.9,162.6-124.3,235.2-95.5" fill="none" stroke="#FAFAFA"
+                      stroke-miterlimit="10"
+                      stroke-width="10"></path></g></svg>
           </a></div>
         </div>
       </div>
