--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -12,6 +12,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800" rel="stylesheet">
   <link rel="stylesheet" src="./assets/semantic.min.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="stylesheet" href="/stylesheets/profi-option.css">
   <link rel="stylesheet" href="/stylesheets/main.css">
 </head>
