--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <img alt="xDueDeligence" src="img/logo-xduediligence.svg"></a>
+      <img alt="Logo xDueDeligence" src="img/logo-xduediligence.svg"></a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
                 <a href="#video-modal" data-toggle="modal" data-target=".bd-example-modal-lg">
                   <img
                     src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557036636/www.xduediligence.com/screen.png"
-                    class="img-fluid" alt="Play video"></a>
+                    class="img-fluid" alt="Play Video Image"></a>
               </div>
               <div class="button">
               </div>
@@ -395,7 +395,7 @@
           <div class="team-avatar">
             <img class="img-responsive"
                  src="https://res.cloudinary.com/topmonks/image/upload/f_auto,dpr_auto/v1557037109/www.xduediligence.com/jirka-penzes.jpg"
-                 alt="Team Member - Jiří Penzeš">
+                 alt="Team Member - Jirka Penzes">
           </div>
           <div class="team-desc">
             <h4>Jirka Penzes</h4>
