Extension of header in jobs.cz

--- a/www.topmonks.cz/src/html/shared/header.html
+++ b/www.topmonks.cz/src/html/shared/header.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="26px" height="32px" viewBox="0 0 30 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g transform="translate(-268.000000, -13.000000)" fill-rule="nonzero">
@@ -32,11 +32,12 @@
           TopMonks
         </a>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li class=""><a href="/o-nas/">o nás</a></li>
             <li class=""><a href="/kde-nas-najdete/">kde nás najdete</a></li>
+            <li class=""><a href="/volna-mista/">volná místa</a></li>
             <li class=""><a href="/kontakt/">kontakt</a></li>
             <li class=""><a href="https://studio.topmonks.com/">startup studio</a></li>
           </ul>
